# acs_cosim

./: .gitignore  .gitmodules  .props.example  CMakeLists.txt  LICENSE  README.md  package.bat
Dependencies/: CMakeLists.txt  configure_detours.bat
Dependencies/Detours/: CMakeLists.txt  configure_detours.bat  detours_skip_version.patch
Launcher/: Launcher.cpp  Launcher.sln  Launcher.vcxproj
Launcher/static/cfg/: acos.ini  assists.ini  audio.ini  camera_manager.ini  camera_onboard.ini  controls.ini  gameplay.ini  launcher.ini  python.ini  race.ini  user_ff.ini  video.ini
Launcher/static/cfg/controllers/: 242a4980-aca0-11ee-8001-444553540000.ini  c18c21a0-a1df-11ef-8001-444553540000.ini
MMR_Simulator_DLL/: Car.cpp  Car.h  Car.hpp  CarAvatar.hpp  CarControls.h  CarPhysicsState.h  MMRSimulatorDll.cpp  MMRSimulatorDll.h  MMR_Simulator_DLL.sln  MMR_Simulator_DLL.vcxproj  Parameters.h  PhysicsDriveThread.hpp  Sim.hpp  UDPCommandListener.hpp  Utils.h  ZeromqInterface.cpp  dllmain.cpp  winapi_helpers.cpp  winapi_helpers.hpp
acs_cosim_dll/: CMakeLists.txt
acs_cosim_dll/src/: Parameters.cpp  PhysicsEngine.hpp  dllmain.cpp  winapi_helpers.cpp
acs_cosim_launcher/: CMakeLists.txt
acs_cosim_launcher/src/: Launcher.cpp
